Bug 1573711 - Account for baseline offset (potential effect of vertical-align property) when computing skip-ink intercepts. r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D44297