layout/painting/nsCSSRendering.h
@@ -619,6 +619,9 @@ struct nsCSSRendering {
     // The distance between the left edge of the given frame and the
     // position of the text as positioned without offset of the shadow.
     Float icoordInFrame = 0.0f;
+    // Baseline offset being applied to this text (block-direction adjustment
+    // applied to glyph positions when computing skip-ink intercepts).
+    Float baselineOffset = 0.0f;
   };
 
   /**
